--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,12 +1,1 @@
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
-
-<button class="btn btn-neutral">Neutral</button>
-<button class="btn btn-primary">Primary</button>
-<button class="btn btn-secondary">Secondary</button>
-<button class="btn btn-accent">Accent</button>
-<button class="btn btn-info">Info</button>
-<button class="btn btn-success">Success</button>
-<button class="btn btn-warning">Warning</button>
-<button class="btn btn-error">Error</button>
+<router-outlet></router-outlet>
